samples/_failures_safe/1761327096_29a193_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c14e9406.c: In function ‘main’:
./samples/SAFE/__tmp_c14e9406.c:152:22: error: expected ‘;’ at end of input
  152 |                 break
      |                      ^
      |                      ;
./samples/SAFE/__tmp_c14e9406.c:152:17: error: expected declaration or statement at end of input
  152 |                 break
      |                 ^~~~~
./samples/SAFE/__tmp_c14e9406.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c14e9406.c:152:17: error: expected declaration or statement at end of input
